--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <section class="gallery">
     <h2>Our Memories 📸</h2>
     <div class="photos">
-      <img src="her1.jpeg">
-      <img src="her2.jpeg">
+      <img src="images/her1.jpeg">
+      <img src="images/her2.jpeg">
     </div>
   </section>
 
@@ -44,3 +44,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
