--- a/index.html
+++ b/index.html
@@ -2,46 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>For My Valentine ❤️</title>
+  <title>For You ❤️</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <!-- Landing Section -->
-  <section class="hero">
-    <h1>Hi My Love ❤️</h1>
-    <p>I made something special just for you</p>
-    <button onclick="scrollToLove()">Click Me 💌</button>
-  </section>
+<!-- Floating Hearts -->
+<div class="hearts"></div>
 
-  <!-- Love Message -->
-  <section class="love">
-    <h2>Why I Love You</h2>
-    <p>
-      You make my world brighter, my heart warmer,
-      and my life infinitely better.  
-      Every moment with you feels like magic ✨
-    </p>
-  </section>
+<!-- Hero -->
+<section class="hero">
+  <h1>Hi My Love 💖</h1>
+  <p>I made this little universe just for you</p>
+  <button onclick="scrollToSection('letter')">Open 💌</button>
+</section>
 
-  <!-- Gallery -->
-  <section class="gallery">
-    <h2>Our Memories 📸</h2>
-    <div class="photos">
-      <img src="images/her1.jpeg">
-      <img src="images/her2.jpeg">
-    </div>
-  </section>
+<!-- Love Letter -->
+<section id="letter" class="letter">
+  <h2>My Love Letter To You</h2>
+  <p id="typewriter"></p>
+</section>
 
-  <!-- Valentine Question -->
-  <section class="question">
-    <h2>Will You Be My Valentine? 💖</h2>
-    <button onclick="yesClick()">YES 😍</button>
+<!-- Memories -->
+<section class="memories">
+  <h2>Our Memories ✨</h2>
+  <div class="gallery">
+    <img src="images/pic1.jpg">
+    <img src="images/pic2.jpg">
+    <img src="images/pic3.jpg">
+  </div>
+</section>
+
+<!-- Question -->
+<section class="question">
+  <h2>Will You Be My Valentine? 🌹</h2>
+  <div class="buttons">
+    <button onclick="yesAnswer()">Yes 💍</button>
     <button id="noBtn">No 🙈</button>
-    <p id="response"></p>
-  </section>
+  </div>
+  <p id="answer"></p>
+</section>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
-
