--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 <section class="memories">
   <h2>Our Memories ✨</h2>
   <div class="gallery">
-    <img src="images/her1.jpg">
-    <img src="images/her2.jpg">
-    <img src="images/her3.jpg">
+    <img src="images/her1.jpeg">
+    <img src="images/her2.jpeg">
+    <img src="images/her3.jpeg">
   </div>
 </section>
 
@@ -47,4 +47,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
