--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@ h1,h2{font-family:'Pacifico',cursive}
   <h2>Our Beautiful Memories</h2>
   <div class="gallery">
     <!-- Replace with YOUR photos -->
-    <img src="images/her1.jpg">
-    <img src="images/her2.jpg">
-    <img src="images/her3.jpg">
-    <img src="images/her4.jpg">
+    <img src="images/her1.jpeg">
+    <img src="images/her2.jpeg">
+    <img src="images/her3.jpeg">
+    <img src="images/her4.jpeg">
   </div>
   <button class="btn" onclick="startProposal()">Continue ❤️</button>
 </section>
@@ -191,4 +191,5 @@ function toggleMusic(){
 
 </body>
 </html>
+
 
