--- a/index.html
+++ b/index.html
@@ -5,63 +5,121 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>For Sanjana ❤️</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box;scroll-behavior:smooth}
 body{
   font-family:'Poppins',sans-serif;
   background:linear-gradient(135deg,#ff758c,#ff7eb3);
-  color:white; overflow-x:hidden;
+  color:#fff;
+  overflow-x:hidden;
 }
-h1,h2{font-family:'Pacifico',cursive}
-.section{padding:100px 20px;text-align:center}
 
-/* Hearts */
-.heart{position:fixed;bottom:-20px;font-size:20px;animation:up 7s linear infinite;opacity:.8}
-@keyframes up{to{transform:translateY(-120vh) scale(1.8);opacity:0}}
+/* Floating Hearts */
+.heart{
+  position:fixed;
+  bottom:-20px;
+  font-size:20px;
+  animation:float 8s linear infinite;
+  opacity:.8;
+}
+@keyframes float{
+  to{transform:translateY(-120vh) scale(1.8);opacity:0}
+}
+
+/* Sections */
+.section{
+  padding:90px 20px;
+  text-align:center;
+  max-width:1000px;
+  margin:auto;
+}
+h1,h2{
+  font-family:'Pacifico',cursive;
+  letter-spacing:1px;
+}
+h1{font-size:3.8rem;margin-bottom:15px}
+h2{font-size:2.8rem;margin-bottom:40px}
+
+p{
+  font-size:1.15rem;
+  line-height:1.8;
+  max-width:750px;
+  margin:20px auto;
+}
 
 /* Hero */
-.hero{height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center}
-.typewriter{font-size:2rem;margin-top:20px;height:50px}
+.hero{
+  height:100vh;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  padding:20px;
+}
+
+.typewriter{
+  font-size:1.8rem;
+  margin-top:10px;
+  height:50px;
+}
 
 /* Buttons */
 .btn{
-  background:#ff2e63;border:none;color:white;padding:14px 35px;
-  border-radius:30px;font-size:1rem;margin:10px;cursor:pointer;
-  transition:.3s;box-shadow:0 10px 25px rgba(0,0,0,.3)
+  background:#ff2e63;
+  border:none;
+  color:white;
+  padding:14px 38px;
+  border-radius:40px;
+  font-size:1rem;
+  margin:12px;
+  cursor:pointer;
+  transition:.3s;
+  box-shadow:0 10px 25px rgba(0,0,0,.25);
 }
-.btn:hover{transform:scale(1.1)}
+.btn:hover{transform:scale(1.08);background:#ff0f4f}
 
 /* Gallery */
-.gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px;max-width:900px;margin:auto}
-.gallery img{width:100%;border-radius:20px;transition:.4s}
-.gallery img:hover{transform:scale(1.08)}
+.gallery{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+  gap:25px;
+}
+.gallery img{
+  width:100%;
+  border-radius:20px;
+  transition:.4s;
+}
+.gallery img:hover{transform:scale(1.06)}
 
-/* Letter Popup */
+/* Popup Letter */
+.popup, .overlay{display:none}
+.overlay{
+  position:fixed;inset:0;background:rgba(0,0,0,.6);z-index:9;
+}
 .popup{
-  position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
-  background:white;color:#333;width:90%;max-width:500px;
-  padding:30px;border-radius:20px;display:none;z-index:10;
+  position:fixed;top:50%;left:50%;
+  transform:translate(-50%,-50%);
+  background:white;color:#333;
+  padding:35px;border-radius:20px;
+  max-width:520px;width:90%;
+  z-index:10;
 }
 .popup h3{color:#ff2e63;margin-bottom:15px}
-.overlay{
-  position:fixed;top:0;left:0;width:100%;height:100%;
-  background:rgba(0,0,0,.6);display:none;z-index:9;
-}
 
 /* Proposal */
-#proposal{display:none}
-.proposal-btns{margin-top:30px}
+#proposal,#gallerySection,#clue{display:none}
 
-/* Music */
+/* Music button */
 .music{
- position:fixed;top:20px;right:20px;background:white;color:#ff2e63;
- padding:10px 14px;border-radius:50%;cursor:pointer;font-weight:bold;
+  position:fixed;
+  top:20px;right:20px;
+  background:white;color:#ff2e63;
+  padding:10px 14px;border-radius:50%;
+  font-weight:bold;cursor:pointer;
 }
-
-/* Clue */
-#clue{display:none;font-size:1.3rem;margin-top:40px}
 </style>
 </head>
 
@@ -84,29 +142,29 @@ h1,h2{font-family:'Pacifico',cursive}
 </section>
 
 <!-- GALLERY -->
-<section class="section" id="gallery" style="display:none">
+<section class="section" id="gallerySection">
   <h2>Our Beautiful Memories</h2>
   <div class="gallery">
-    <!-- Replace with YOUR photos -->
-    <img src="images/her1.jpeg">
-    <img src="images/her2.jpeg">
-    <img src="images/her3.jpeg">
-    <img src="images/her4.jpeg">
+    <img src="photo1.jpg">
+    <img src="photo2.jpg">
+    <img src="photo3.jpg">
+    <img src="photo4.jpg">
   </div>
   <button class="btn" onclick="startProposal()">Continue ❤️</button>
 </section>
 
 <!-- PROPOSAL -->
 <section class="section" id="proposal">
-  <h2>Sanjana, Will You Be My Forever Valentine? 💍</h2>
-  <div class="proposal-btns">
-    <button class="btn" onclick="showClue()">YES 💖</button>
-    <button class="btn" id="noBtn">NO 😜</button>
-  </div>
+  <h2>Will You Be My Forever Valentine? 💍</h2>
+  <button class="btn" onclick="showClue()">YES 💖</button>
+  <button class="btn" id="noBtn">NO 😜</button>
+
   <div id="clue">
-    🎁 Your surprise gift is waiting where we keep our sweetest memories...  
-    <br><br>
-    👉 <strong>Inside the pillow cover on the bed</strong> 😉
+    <p style="margin-top:30px;font-size:1.3rem">
+      🎁 Your surprise gift is hidden where we rest after a long day…  
+      <br><br>
+      👉 <strong>Inside the pillow cover on the bed 😉</strong>
+    </p>
   </div>
 </section>
 
@@ -115,13 +173,11 @@ h1,h2{font-family:'Pacifico',cursive}
 <div class="popup" id="letter">
   <h3>My Dearest Sanjana ❤️</h3>
   <p>
-    From the moment you entered my life, everything became brighter.  
+    From the moment you came into my life, everything became brighter.  
     Your smile, your voice, your presence — they mean the world to me.  
-    This little surprise is just a glimpse of how much I love you.  
-    You are my today, tomorrow, and forever.  
+    This small surprise is just a glimpse of how much I love you.
   </p>
-  <br>
-  <p>Forever yours,<br><strong>Mohith</strong></p>
+  <p style="margin-top:15px"><strong>Forever yours, Mohith</strong></p>
 </div>
 
 <script>
@@ -132,64 +188,60 @@ setInterval(()=>{
  h.innerHTML='❤️';
  h.style.left=Math.random()*100+'vw';
  document.body.appendChild(h);
- setTimeout(()=>h.remove(),7000);
+ setTimeout(()=>h.remove(),8000);
 },300);
 
 // Typewriter
-const text="I love you Sanjana… more than words can ever express ❤️";
+const text="I love you Sanjana… more than words can express ❤️";
 let i=0;
-function typing(){
+(function typing(){
  if(i<text.length){
-   document.getElementById('type').innerHTML+=text.charAt(i);
-   i++; setTimeout(typing,60);
+  document.getElementById('type').innerHTML+=text.charAt(i);
+  i++; setTimeout(typing,60);
  }
-}
-typing();
+})();
 
-// Letter popup
+// Music autoplay after first click anywhere
+const music=document.getElementById('music');
+document.body.addEventListener('click',()=>{
+ if(music.paused) music.play();
+},{once:true});
+
+function toggleMusic(){
+ if(music.paused) music.play();
+ else music.pause();
+}
+
+// Popup
 function openLetter(){
- document.getElementById('letter').style.display='block';
- document.getElementById('overlay').style.display='block';
+ overlay.style.display='block';
+ letter.style.display='block';
 }
 function closeLetter(){
- document.getElementById('letter').style.display='none';
- document.getElementById('overlay').style.display='none';
+ overlay.style.display='none';
+ letter.style.display='none';
 }
 
-// Gallery
+// Flow
 function showGallery(){
- document.getElementById('gallery').style.display='block';
+ gallerySection.style.display='block';
  window.scrollTo(0,document.body.scrollHeight);
 }
-
-// Proposal
 function startProposal(){
- document.getElementById('proposal').style.display='block';
+ proposal.style.display='block';
  window.scrollTo(0,document.body.scrollHeight);
+}
+function showClue(){
+ clue.style.display='block';
 }
 
 // No button runs away
-const noBtn=document.getElementById('noBtn');
 noBtn.addEventListener('mouseover',()=>{
  noBtn.style.position='absolute';
  noBtn.style.left=Math.random()*80+'%';
  noBtn.style.top=Math.random()*80+'%';
 });
-
-// Show clue
-function showClue(){
- document.getElementById('clue').style.display='block';
-}
-
-// Music
-const music=document.getElementById('music');
-function toggleMusic(){
- if(music.paused) music.play();
- else music.pause();
-}
 </script>
 
 </body>
 </html>
-
-
