--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@ p{
 <section class="section" id="gallerySection">
   <h2>Our Beautiful Memories</h2>
   <div class="gallery">
-    <img src="photo1.jpg">
-    <img src="photo2.jpg">
-    <img src="photo3.jpg">
-    <img src="photo4.jpg">
+    <img src="images/her1.jpeg">
+    <img src="images/her2.jpeg">
+    <img src="images/her3.jpeg">
+    <img src="images/her4.jpeg">
   </div>
   <button class="btn" onclick="startProposal()">Continue ❤️</button>
 </section>
@@ -245,3 +245,4 @@ noBtn.addEventListener('mouseover',()=>{
 
 </body>
 </html>
+
