--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@ p{max-width:800px;line-height:1.8;font-size:1.15rem}
 <section class="slide">
   <h2>Our Beautiful Memories 📸</h2>
   <div class="gallery">
-    <img src="photo1.jpg">
-    <img src="photo2.jpg">
-    <img src="photo3.jpg">
-    <img src="photo4.jpg">
+    <img src="images/her1.jpeg">
+    <img src="images/her2.jpeg">
+    <img src="images/her3.jpeg">
+    <img src="images/her4.jpeg">
   </div>
   <button class="btn" onclick="startProposal()">Continue ❤️</button>
 </section>
@@ -243,3 +243,4 @@ noBtn.addEventListener('mouseover',()=>{
 
 </body>
 </html>
+
